<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/tvLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/lobster"
        android:shadowColor="@android:color/black"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="2"
        android:text="@string/triply_logo"
        android:textColor="@android:color/white"
        android:textSize="96sp" />

<!--    bglogincard-->
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bg_login_card"
        android:orientation="vertical"
        android:padding="32dp">

        <!-- Login / Sign up -->
        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggle_button_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:checkedButton="@id/btn_toggle_login"
            app:singleSelection="true">

            <!--LOGIN -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_toggle_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                app:backgroundTint="@color/blue"
                app:strokeWidth="0dp" />

            <!--SIGN UP -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_toggle_signup"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="@color/blue"
                app:strokeColor="@color/blue" />

        </com.google.android.material.button.MaterialButtonToggleGroup>

        <!-- Email-->
        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:hint="@string/hint_email_username"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress" />

        <!-- Password -->
        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:autofillHints="password" />

        <!-- Quên mật khẩu -->
        <TextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"
            android:text="@string/forgot_password"
            android:textColor="@android:color/darker_gray" />

        <!-- LOGIN-->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="32dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:backgroundTint="@color/blue"
            app:cornerRadius="20dp" />

        <!-- or login with -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:text="@string/or_login_with"
            android:textColor="@android:color/darker_gray" />
<!--        logo mxh-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_google"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginHorizontal="16dp"
                android:src="@drawable/logogoogle"
                android:contentDescription="@string/google_login" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>