<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/tvLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/lobster"
        android:shadowColor="@android:color/black"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="2"
        android:text="Triply"
        android:textColor="@android:color/white"
        android:textSize="96sp" />

<!--    bglogincard-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bg_login_card"
        android:orientation="vertical"
        android:padding="32dp">

        <!-- Login / Sign up -->
        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggle_button_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:checkedButton="@id/btn_toggle_signup"
            app:singleSelection="true">

            <!-- LOGIN -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_toggle_login"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Login"
                android:textAllCaps="false"
                android:textColor="@color/blue"
                app:strokeColor="@color/blue" />

            <!-- SIGN UP -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_toggle_signup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Sign up"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                app:backgroundTint="@color/blue"
                app:strokeWidth="0dp" />

        </com.google.android.material.button.MaterialButtonToggleGroup>

        <!-- Full Name -->
        <EditText
            android:id="@+id/et_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/hint_full_name"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <!-- Username -->
        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/hint_username"
            android:inputType="text"
            android:minHeight="48dp" />

        <!-- Email-->
        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:hint="@string/hint_email_username"
            android:inputType="textEmailAddress"
            android:minHeight="48dp" />

        <!-- Password -->
        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <!-- Confirm Password -->
        <EditText
            android:id="@+id/et_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/error_password_mismatch"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <!-- Phone -->
        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/hint_phone"
            android:inputType="phone"
            android:minHeight="48dp" />

        <!-- Address -->
        <EditText
            android:id="@+id/et_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/hint_address"
            android:inputType="textPostalAddress"
            android:minHeight="48dp" />

        <!-- Sign up -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="32dp"
            android:text="Sign up"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:backgroundTint="@color/blue"
            app:cornerRadius="20dp" />

        <!-- or sign up with -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:text="or sign up with"
            android:textColor="@android:color/darker_gray" />

        <!-- logo mxh -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginHorizontal="16dp"
                android:src="@drawable/logogoogle" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>